# codex-board

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: final-review-fixes-report.md
docs/superpowers/plans/: 2026-06-30-session-tree-glyphs-implementation.md  2026-06-30-session-tree-implementation.md  2026-07-01-conversation-markdown-rendering-implementation.md  2026-07-03-session-symlink-current-dir-implementation.md  2026-07-10-codex-auto-compact-percent-implementation.md  2026-07-10-final-review-fixes.md  2026-07-10-model-aware-reasoning-effort-implementation.md
docs/superpowers/specs/: 2026-06-30-session-tree-design.md  2026-06-30-session-tree-glyphs-design.md  2026-07-01-conversation-markdown-rendering-design.md  (+3 more)
src/: claude_store.rs  main.rs  session_store.rs
src/app/: conversation_flow.rs  conversation_state.rs  mod.rs  model_fetch.rs  overlays.rs  provider_display.rs  provider_editor.rs  provider_tabs.rs  providers.rs  providers_state.rs  runtime.rs  scroll.rs  search.rs  selection.rs  session_paths.rs  sessions.rs  sessions_state.rs  status.rs  text_field.rs
src/provider_config/: auth.rs  codex.rs  codex_apply.rs  codex_import.rs  file_io.rs  mod.rs  model_catalog.rs  models.rs  registry.rs
src/ui/: chrome.rs  conversation.rs  details.rs  input.rs  input_view.rs  layout.rs  markdown.rs  mod.rs  overlay_input.rs  page_input.rs  provider_editor_input.rs  provider_editor_view.rs  search_dialogs.rs  tables.rs  text_input.rs
