[package]
name = "codex-board"
version = "1.0.1"
edition = "2024"
authors = ["mosionton"]
description = "Terminal UI for browsing Codex sessions, managing model providers, and resuming prior work."
license = "MIT"
repository = "https://github.com/mosionton/codex-board"
readme = "README.md"
keywords = ["codex", "tui", "cli", "sessions"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cboard"
path = "src/main.rs"

[dependencies]
anyhow = "1"
crossterm = "0.29"
ratatui = "0.30.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
unicode-width = "0.2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"
